--- a/index.html
+++ b/index.html
@@ -122,22 +122,7 @@
 			        </pre>
 					</div>
 				</section>
-				<section>
-					<p>Use a function to remove a class ...</p>
-					<pre>
-	<code>
-	$("div").removeClass(function() {
-		return $(this).prev().attr('class');
-	});
-	</code>
-			        </pre>
-					<p>or remove all classes ...</p>
-					<pre>
-	<code>
-	$("div").removeClass();
-	</code>
-			    </pre>
-				</section>
+				
 				<section>
 					<h5>Adding Classes</h5>
 					<div>
@@ -162,6 +147,22 @@
 						</pre>
 					</div>
 				</section>
+<section>
+					<p>Use a function to remove a class ...</p>
+					<pre>
+	<code>
+	$("div").removeClass(function() {
+		return $(this).prev().attr('class');
+	});
+	</code>
+			        </pre>
+					<p>or remove all classes ...</p>
+					<pre>
+	<code>
+	$("div").removeClass();
+	</code>
+			    </pre>
+				</section>				
 				<section>
 					<h1>
 						<br />
@@ -317,6 +318,12 @@
 				<section>
 					<h2>callbacks vs. deferreds</h2>
 				</section>
+				<section>
+					<ul>
+						<li>Callbacks are fired once per match element</li>
+					 	<li>Deferred fires when all elements have completed the animation</li>
+					</ul>
+				</section>	
 			</div>
 
 		</div>
