Starting to add contribution slides

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<code>
 	$ mkdir mywebsite
 	$ cd mywebsite
-	$ yeoman init quickstart	
+	$ yeoman init quickstart
 	</code>
 			                    </pre>
 						<div class="fragment">now we have<br>
@@ -122,16 +122,16 @@
 			        </pre>
 					</div>
 				</section>
-				
+
 				<section>
 					<h5>Adding Classes</h5>
 					<div>
 						<pre>
 	<code>
 	$("div").addClass("foo");
-	
+
 	// multiple classes
-	$("div").addClass("foo bar"); 
+	$("div").addClass("foo bar");
 	</code>
 			    </pre>
 					</div>
@@ -162,7 +162,7 @@
 	$("div").removeClass();
 	</code>
 			    </pre>
-				</section>				
+				</section>
 				<section>
 					<h1>
 						<br />
@@ -192,11 +192,11 @@
 					<pre>
 	<code>
 	$("div").hide();
-	
-	// restores el to original value 
+
+	// restores el to original value
 	// ex: display:'inline-block'
 	$("div").show("fast");
-	
+
 	$("div").toggle()
 	</code>
 			        </pre>
@@ -261,12 +261,12 @@
 "webkitTransition" in document.documentElement.style
 	</code>
 						</pre>
-					</section> 
+					</section>
 					<section>
 						better yet just use Modernizr
 						<pre><code class="javascript">
 	if (Modernizr.csstransitions){
-		// CSS3 
+		// CSS3
 		$('div').addClass('myTransition');
 	} else {
 		// jQuery fallback
@@ -286,7 +286,7 @@
 	  }
 	});
 	</code></pre>
-					</section>					
+					</section>
 				</section>
 				<section>
 					<h2>stop();</h2>
@@ -323,7 +323,20 @@
 						<li>Callbacks are fired once per match element</li>
 					 	<li>Deferred fires when all elements have completed the animation</li>
 					</ul>
-				</section>	
+				</section>
+
+
+
+				<section>
+					<h1>Contributing to jQuery</h1>
+					<h2>How you can help</h2>
+				</section>
+
+				<section>
+					<h2>Straight to the Source</h2>
+
+				</section>
+
 			</div>
 
 		</div>
