fixed root rlative image paths to relative

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 				<section class="elgreg-slides">
 					<section class="elgreg-slides">
 						<h2>Bugs, bugs, bugs</h2>
-						<p><a href="http://bugs.jquery.com/"><img src="/images/bugs.png"></a></p>
+						<p><a href="http://bugs.jquery.com/"><img src="images/bugs.png"></a></p>
 						<p><a href="http://bugs.jquery.com/">http://bugs.jquery.com/</a></p>
 
 					</section>
@@ -376,7 +376,7 @@
 				</section>
 				<section class="elgreg-slides">
 					<h2>IRC is your Friend</h2>
-					<p><a href="http://webchat.freenode.net/?channels=%23jquery"><img src="/images/irc.jpg"></a></p>
+					<p><a href="http://webchat.freenode.net/?channels=%23jquery"><img src="images/irc.jpg"></a></p>
 					<p>Limechat, freenode web, etc.</p>
 					<p>[insert warning here]</p>
 				</section>
@@ -415,8 +415,8 @@
 
 					<section class="elgreg-slides">
 						<h2>Pull!</h2>
-						<p><a href="https://github.com/jquerydc/jquery"><img src="/images/pull.jpg"/></a></p>
-						<p><img src="/images/pull_request.png"></p>
+						<p><a href="https://github.com/jquerydc/jquery"><img src="images/pull.jpg"/></a></p>
+						<p><img src="images/pull_request.png"></p>
 						<p>Create a pull request. Include information about the ticket from bugs.jquery.com and update the ticket with a link back.</p>
 					</section>
 				</section>
