added JSbins and reordered a bit, plus some cleanup

--- a/demo/app/demo.html
+++ b/demo/app/demo.html
@@ -91,12 +91,14 @@
 /**********************/
 /* Effects            */
 /**********************/
+
+/* bye bye Laura */ 
 // $("#item-1").hide();
 
-
+/* hello Joan */
 // $("#item-4").show('slow');
 
-
+/* show pause 2s then hide over and over */
 // $("#item-4").toggle('slow');
 // setInterval(function(){
 //     $("#item-4").toggle('slow');
@@ -160,7 +162,7 @@
 //         'left' : '200px'
 //         }, 2000, 'swing')
 //     .animate({
-//         'left' : '+=200px' // <-- move relative
+//         'left' : '+=200px' // <-- move relative to prev animation
 //         }, 2000, 'swing'); 
 
 
@@ -169,7 +171,7 @@
 /***************************/
 /* CSS3 w jQuery Fallback  */
 /***************************/
-// $("#item-4").css({'opacity' : '0', 'display' : 'block',});
+// $("#item-4").css({'opacity' : '0', 'display' : 'block'});
 // setTimeout(function(){
 //     if (Modernizr.csstransitions){
 //         // CSS3 
@@ -181,7 +183,7 @@
 //         // jQuery fallback
 //         $('#item-4').fadeIn(3000);
 //     }
-// }, 10)
+// }, 10);
 
 
 
